small render bug fix, stuff doesn't overlap in step 3

--- a/src/app/components/Admin/admin.css
+++ b/src/app/components/Admin/admin.css
@@ -40,7 +40,7 @@
 }
 
 .stepContainer {
-    margin-bottom: 1%;
+    padding-top: 40vh;
 }
 
 .flaggedQuestionsContainer {
